[package]
name = "polyjuice_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Element", "DomTokenList", "console", "Event", "EventListener"] }
wasm-bindgen = "0.2"
